--- a/intro-to-pytorch/Part 8 - Transfer Learning (Solution).ipynb
+++ b/intro-to-pytorch/Part 8 - Transfer Learning (Solution).ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = 'Cat_Dog_data'\n",
+    "data_dir = '/Users/joashc/Downloads/Cat_Dog_data/'\n",
     "\n",
     "# TODO: Define transforms for the training data and testing data\n",
     "train_transforms = transforms.Compose([transforms.RandomRotation(30),\n",
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
